# animawatch

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-merge.yml  ci.yml  release.yml
examples/: README.md  accessibility_check.py  basic_animation_check.py  ci_integration.py  form_interaction.py  multipage_workflow.py  screenshot_analysis.py  visual_comparison.py
src/animawatch/: __init__.py  baseline.py  browser.py  cache.py  config.py  consensus.py  devices.py  diff.py  fps.py  frames.py  grounding.py  logging.py  metrics.py  models.py  notifications.py  reports.py  retry.py  server.py  vision.py
src/visual_diagnosis_mcp/: __init__.py  browser.py  config.py  server.py
tests/: __init__.py  test_browser.py  test_cache.py  test_config.py  test_consensus.py  test_devices.py  test_diff.py  test_fps.py  test_frames.py  test_grounding.py  test_metrics.py  test_models.py  test_server.py  test_vision.py
